text alignment fix in main page

--- a/style.css
+++ b/style.css
@@ -947,7 +947,11 @@ div.container {
     }
 
     #splash p {
-        max-width: 80%;
+        text-align: center;
+        margin-left: auto;
+        margin-right: auto;
+        display: block;
+        width: 70%;
     }
 
     .splash-content {
